# agent

./: .gitignore  README.md
cloud-app/: App.tsx  (+7 more)
loopguard/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
loopguard/docs/: architecture.md  cerebras_setup.md  demo_script.md
loopguard/examples/: broken_agent.py  broken_multi_agent.py  cerebras_tool_loop_demo.py  litellm_example.py  litellm_guarded_agent.py  manual_wrapper_example.py
loopguard/src/loopguard/: __init__.py  agent.py  cerebras_demo.py  cli.py  config.py  decision.py  demos.py  diff.py  event.py  exceptions.py  guard.py  judge.py  live_demo.py  normalize.py  pricing.py  storage.py  tools.py
loopguard/src/loopguard/detectors/: budget.py  exact.py  pingpong.py  semantic.py
loopguard/src/loopguard/embeddings/: base.py  local_hashing.py
loopguard/src/loopguard/integrations/: cerebras_agent.py  cerebras_client.py  litellm_callback.py  manual.py
loopguard/src/loopguard/providers/: __init__.py  base.py  cerebras_provider.py  litellm_provider.py
loopguard/src/loopguard/server/: app.py  projects.py  runs.py  schemas.py
loopguard/tests/: conftest.py  test_action_modes.py  test_agent.py  test_all.py  test_budget.py  test_cerebras_client_mocked.py  test_cli_smoke.py  test_config_decision.py  test_demos.py  test_engine_hooks.py  test_exact_detector.py  test_guard.py  test_judge.py  test_litellm_callback.py  test_live_demo.py  test_normalize.py  test_pingpong_detector.py  test_pricing.py  test_providers.py  test_semantic_detector.py  test_server_app.py  test_server_runs.py  test_tools.py
(+38 files in other folders)
