[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loopguard"
version = "0.1.0"
description = "A local semantic circuit breaker for AI agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["typer>=0.12", "rich>=13", "pydantic>=2", "numpy>=1.24", "scikit-learn>=1.3", "rapidfuzz>=3"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]
cerebras = ["cerebras_cloud_sdk>=1.0"]
litellm = ["litellm>=1.40"]

[project.scripts]
loopguard = "loopguard.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
